--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Titillium+Web:ital,wght@1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -11,6 +12,6 @@
 
 @layer base {
   html{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Fuzzy Bubbles', cursive;
   }
 }
